# eml_ros2_packages

./: .dir-locals.el  .gitignore  .gitmodules  pseudo.txt
basic_pub_sub/: package.xml  setup.cfg  setup.py
basic_pub_sub/basic_pub_sub/: my_pub.py  my_sub.py
basic_pub_sub/launch/: inclass.py
gps_nav_interfaces/: CMakeLists.txt  package.xml
gps_point_at_carrot/: package.xml  setup.cfg  setup.py
gps_point_at_carrot/gps_point_at_carrot/: vehicle_controller_Stanley.py  vehicle_controller_Stanley_new.py  vehicle_controller_point_at_carrot.py
gps_point_at_carrot/launch/: simulation_demo.launch.py  vehicle.launch.py
lidar_launch/: package.xml  setup.cfg  setup.py
lidar_launch/config/: pcloud_lscan_viz_config.rviz
lidar_launch/launch/: lidar_launch.py  lidar_rviz_launch.py
milestone_3_bang/: package.xml  pseudo.txt  psuedocode.txt  setup.cfg  setup.py
milestone_3_bang/milestone_3_bang/: bb_controller.py
milestone_4_pid/: package.xml  psuedocode.txt  setup.cfg  setup.py
milestone_4_pid/milestone_4_pid/: pid_controller.py
milestone_one/: package.xml  setup.cfg  setup.py
milestone_one/test/: test_quotient.py
milestone_two/: LICENSE  package.xml  setup.cfg  setup.py
milestone_two/milestone_two/: laserToPC.py
pose_estimator/: .~lock.data_bag1.ods#  data_bag1.ods  data_bag1.txt  package.xml  pseudo.txt  setup.cfg  setup.py
pose_estimator/bag_data/rosbag2_2023_04_17-14_28_11/: metadata.yaml  rosbag2_2023_04_17-14_28_11_0.db3
pose_estimator/bag_data/rosbag2_2023_04_17-14_31_20/: metadata.yaml  rosbag2_2023_04_17-14_31_20_0.db3
pose_estimator/bag_data/rosbag2_2023_04_17-14_38_28/: metadata.yaml  rosbag2_2023_04_17-14_38_28_0.db3
pose_estimator/gps csv/: data_gps1.txt  data_gps2.txt  data_gps3.txt
pose_estimator/gps_odom_bag/: gps_odom_bag_0.db3  metadata.yaml
pose_estimator/launch/: vehicle.launch.py
pose_estimator/new_data_from_adi/: .~lock.data_pose.txt#  data_gps.txt  data_gps2.txt  data_gps3.txt  data_pose.txt  data_pose2.txt  data_pose3.txt  new_charts.ods
pose_estimator/new_data_from_adi/rosbag2_2023_04_24-13_57_23/: metadata.yaml  rosbag2_2023_04_24-13_57_23_0.db3
pose_estimator/new_data_from_adi/rosbag2_2023_04_24-14_12_49/: metadata.yaml  rosbag2_2023_04_24-14_12_49_0.db3
pose_estimator/new_data_from_adi/rosbag2_2023_04_24-14_25_29/: metadata.yaml  rosbag2_2023_04_24-14_25_29_0.db3
pose_estimator/pose csv/: data_bag1.txt  data_bag2.txt  data_bag3.txt
pose_estimator/pose_estimator/: pose_estimator.py  process_bagfile_csv.py
project1_demo/: package.xml  pseudocode.txt  setup.cfg  setup.py
project1_demo/launch/: control_handle_launch.py
project1_demo/project1_demo/: control_handle.py
project1_openloop_control/: file mapping xbox controller.txt  package.xml  pseudocode.txt  setup.cfg  setup.py  sketch of project 1.drawio
project1_openloop_control/launch/: control_handler_launch.py
project1_openloop_control/project1_openloop_control/: control_handler.py
py_pubsub/: package.xml  setup.py
rand_num/: setup.cfg  setup.py
src/basic_pub_sub/: package.xml  setup.cfg  setup.py
src/basic_pub_sub/basic_pub_sub/: my_pub.py  my_sub.py
src/milestone_one/: setup.cfg
src/rand_num/: package.xml  setup.cfg
stanley_controller/: commands.txt  package.xml  pseudo.txt  setup.py
stanley_controller/data/: carrot_poses.txt
stanley_controller/launch/: simulation_demo.launch.py  vehicle.launch.py
(+3 files in other folders)
